# mosquitto-cert-rego

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SUPPORT.md  aia_fetch.c  audit_log.c  audit_log.h  cache.c  cert_auth.h  cert_parse.c  crl_check.c  crl_fetch.c  crl_fetch.h  http_fetch.c  http_fetch.h  ldap_query.c  ldap_query.h  ocsp_check.c  plugin.c  rego_engine.cpp  rego_engine.h  test.conf
.github/workflows/: build.yml
LICENSES/: BSD-3-Clause.txt  EPL-2.0.txt
client/: README.md  cert_rego_client.py  gen_test_certs.sh  requirements.txt
e2e/: README.md  _gen_crl_fixtures.py  _gen_expired_cert.py  _gen_ocsp_fixtures.py  build-asan.sh  cybersec.py  gen-negative-certs.sh  mosquitto.conf  policy.rego  run-all.sh  run-asan.sh  run-broker.sh  smoke.sh  stop-broker.sh
examples/: 01_minimal_allow_all.rego  02_cn_topic_scope.rego  03_ldap_group_gate.rego  04_multi_root_ca.rego  05_ocsp_in_rego.rego  06_custom_oid.rego  07_crl_in_rego.rego  08_chain_traversal.rego  09_degraded_scope_on_expired.rego  10_san_uri_roles.rego  11_rbac_matrix.rego
tests/: test_policy_multi_root.rego  test_policy_simple.rego  test_rego.cpp  test_stubs.c
